--- a/presentation/index.html
+++ b/presentation/index.html
@@ -32,7 +32,7 @@
 					<h2>Why is this important?</h2>
 					<ol>
 						<li class="fragment">Communicating on paper.</li>
-						<li class="fragment">Presentations.</li>
+						<li class="fragment">Communicating on screen.</li>
 						<li class="fragment">Not: exploratory data analysis.</li>
 					</ol>
 				</section>
@@ -52,7 +52,7 @@
 
 				
 				<section id="fragments">
-					<h2>Presentations</h2>
+					<h2>Communicating on screen</h2>
 					<ol>
 						<ul class="fragment"><li>Can we learn lessons from the local authorities which have had fewer Covid deaths for older people?</li></ul>
 						<ul class="fragment"><li>It's not that simple.</li></ul>
@@ -280,7 +280,7 @@
 
 					<section>
 						<img src="img/visual_processing.PNG" width="50%">
-						<ul>Spence, 2006.</ul>
+						<ul  style="font-size: 20px">Spence, Ian. "William Playfair and the psychology of graphs." In Proceedings of the American Statistical Association, Section on Statistical Graphics, pp. 2426-2436. 2006.</ul>
 					</section>
 
 					
@@ -304,7 +304,7 @@
 					<section>
 						<h2>Aspect ratio</h2>
 						<img src="img/playfair_ratio.png" width="50%">
-						<ul>Tufte, 2001</ul>
+						<ul style="position: absolute; left: 0px; top: 700px; font-size: 20px">Edward Tufte,<em>The Visual Display of Quantitative Information</em>  Cheshire, Conn. :Graphics Press, 2001</ul>
 					</section>
 
 
